--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -182,31 +182,14 @@ div.footInfo span {
     width: 100%;
     height: 300px;
 }
-.prod_tab {
-    display: inline-block;
-    width: 938px;
-    margin: 48px 0;
-    border: 1px solid #e5e5e5;
-    background: #f6f6f6;
+.serviceTab .on {
+    background: skyblue!important;
 }
-.prod_tab.st2 li {
-    width: 15%;
+.serviceTab-button {
+    background: lightgray;
+    border: solid 1px;
 }
-.prod_tab li {
-    float: left;
-    width: 33.26%;
-    text-align: left;
-    position: relative;
-}
-.prod_tab li.on {
-    background: skyblue;
-}
-ol, ul, li {
-    list-style: none;
-    list-style-position: initial;
-    list-style-image: initial;
-    list-style-type: none;
-}
+
 
 /*중간크기*/
 @media screen and (min-width: 993px) and (max-width: 1199px) {
