홈페이지 수정 거의 마무리 해둠

--- a/src/main/resources/static/css/homepage-m.css
+++ b/src/main/resources/static/css/homepage-m.css
@@ -58,7 +58,7 @@
         position: absolute;
         top: 7%;
         left: 56.5%;
-        color: #000000;
+        color: #ffffff;
         font-size: 5.5vw;
         font-weight: bold;
     }
@@ -67,8 +67,8 @@
         position: absolute;
         top: 18%;
         left: 52.5%;
-        color: #000000;
-        font-size: 2.6vw;
+        color: #ffffff;
+        font-size: 2.8vw;
         font-weight: bold;
     }
 
@@ -76,7 +76,7 @@
         position: absolute;
         top: 41%;
         left: 54%;
-        color: #000000;
+        color: #ffffff;
         font-size: 5.5vw;
         font-weight: bold;
     }
@@ -85,8 +85,8 @@
         position: absolute;
         top: 52%;
         left: 53.5%;
-        color: #000000;
-        font-size: 2.6vw;
+        color: #ffffff;
+        font-size: 2.8vw;
         font-weight: bold;
     }
 
@@ -94,7 +94,7 @@
         position: absolute;
         top: 73%;
         left: 64%;
-        color: #000000;
+        color: #ffffff;
         font-size: 5.5vw;
         font-weight: bold;
     }
@@ -103,8 +103,8 @@
         position: absolute;
         top: 84%;
         left: 57%;
-        color: #000000;
-        font-size: 2.6vw;
+        color: #ffffff;
+        font-size: 2.8vw;
         font-weight: bold;
     }
 
