--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -181,6 +181,8 @@ div.footInfo span {
 .serviceImg {
     width: 100%;
     height: 300px;
+    border: 0.0625rem solid #dee2e6;
+    border-radius: 0.25rem;
 }
 .nav.nav-pills {
     background: #f0f2f5;
@@ -298,6 +300,11 @@ img.softImg {
 .quickSide .list-group-item-action:hover {
     background : #344767 !important;
 }
+/* 사이드바 버튼 누르고 페이지 안바뀌면 색상 고정 될때 수정*/
+.list-group {
+    --bs-list-group-action-hover-bg: #a9a9a9;
+}
+/* 사이드바 화면 크기 작아지면 안보이게 */
 @media screen and (max-width: 1668px) {
     .quickSide {
         display: none !important;
